Fix whitespace in modified date and add padding-left to tags

--- a/assets/css/bobastyle.css
+++ b/assets/css/bobastyle.css
@@ -27,6 +27,10 @@
   padding-top: 5px;
 }
 
+.tags {
+  padding-left: 5px;
+}
+
 body {
   margin: auto;
   max-width: 720px;
